--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "azure-devops-node-api": "file:../azure-devops-node-api/_build",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
+    "rxjs-compat": "^6.3.3",
     "typed-rest-client": "^1.0.9",
     "underscore": "^1.9.1",
     "zone.js": "~0.8.26"
